force-app/main/default/objects/cgcloud__Calculation_Event__e/cgcloud__Calculation_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Events for Offcore Calculations</description>
    <label>Calculation Event</label>
    <pluralLabel>Calculation Events</pluralLabel>
</CustomObject>