force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__Calculation_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Id__c</fullName>
    <label>Calculation Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>