force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>