force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Time__c</fullName>
    <description>Timestamp when Offcore Calculation was finished.</description>
    <label>Calculation End Time</label>
    <type>DateTime</type>
</CustomField>