force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__Record_Version__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Record_Version__c</fullName>
    <description>Version of the object to be calculated.</description>
    <label>Record Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>