force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__Register_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Register_Time__c</fullName>
    <description>Timestamp when Calculation was registered offcore</description>
    <label>Calculation Register Time</label>
    <type>DateTime</type>
</CustomField>