force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__Result__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Result__c</fullName>
    <label>Calculation Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>