force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Time__c</fullName>
    <description>Timestamp when Offcore Calculation was started.</description>
    <label>Calculation Start Time</label>
    <type>DateTime</type>
</CustomField>