force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Status__c</fullName>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>