force-app/main/default/objects/cgcloud__Calculation_Event__e/fields/cgcloud__Version__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Version__c</fullName>
    <description>Calculation Response Version.</description>
    <label>Response Version</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>